# Physical-Event-Experience

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements-serving.txt  requirements.txt  serve.py  stadium.json  test_kfp.py
.github/workflows/: ci.yml
avcp/: __init__.py  edge_ingestor.py  federated_server.py  key_rotation.py  publishers.py  schema.py
avcp/vertex/: __init__.py  crowd_predictor.py  model_config.yaml  pipeline.py
avcp_flutter/: .firebaserc  .flutter-plugins-dependencies  README.md  database.rules.json  firebase.json  pubspec.yaml
avcp_flutter/.firebase/: hosting.YnVpbGQvd2Vi.cache
avcp_flutter/lib/: action_banner.dart  crowd_vector.dart  crowd_vector.freezed.dart  crowd_vector.g.dart  dashboard.dart  firebase_options.dart  group_manager.dart  index.dart  intent_service.dart  main.dart  mesh_engine.dart  mock_data_generator.dart  providers.dart  theme.dart
avcp_flutter/lib/accessibility/: wcag_tokens.dart
avcp_flutter/lib/mock/: wayfinding_mock_data.dart
avcp_flutter/lib/models/: congestion_level.dart  crowd_velocity_vector.dart  (+16 more)
avcp_flutter/test/: banner_test.dart  dashboard_test.dart  intent_service_test.dart  theme_test.dart  widget_test.dart
avcp_flutter/web/: index.html  manifest.json
tests/: __init__.py  conftest.py  locustfile.py  mock_stadium_data.py  stadium_sim.py  test_anomaly.py  test_bottleneck.py  test_circuit_breaker.py  test_edge_publisher.py  test_key_rotation.py  test_pii.py  test_vertex.py
tests/load/: __init__.py  locustfile.py
tests/security/: __init__.py  test_firebase_rules.py
(+49 files in other folders)
